# CoinbaseDownloader

./: .gitignore  README.md  pyproject.toml
src/coinbasedownloader/: _types.py  _typing.py  api.py  coinbase_api.py  db_utils.py  download_job.py  main.py  service.py  utils.py
tests/: test_download_service.py
